# psychic-computing-machine

./: pyproject.toml
src/procgen/: wavefunctioncollapse.py
src/tests/: test_wavefunction_collapse.py
