[tool.poetry]
name = "psychic-computing-machine"
version = "0.10"
description = "Roguelike written in Python"
authors = ["Justin <contact@tsujin.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
